feat: java functional